Oops.  The command to run is aclocal, not aclocal.m4.

--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,7 @@ endif
 BUILD-DIRS	:= $(BUILD) $(BUILD)-static
 
 aclocal.m4: $(wildcard automake/*.m4)
-	aclocal.m4 -I automake
+	aclocal -I automake
 
 configure: configure.in aclocal.m4
 	autoconf
