--- a/Makefile.in
+++ b/Makefile.in
@@ -6,6 +6,7 @@ VERSION		= $(shell cat version-nr)
 
 GENFILES	= version.h
 
+default: all
 include Makefile.conf
 
 SUBDIRS		= include optlib lib intl dpkg-deb split scripts utils main \
