--- a/split/Makefile.in
+++ b/split/Makefile.in
@@ -2,8 +2,8 @@
 VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
-top_builddir = ..
 
+default: all
 include ../Makefile.conf
 
 SPLIT_SOURCES		= queue.c split.c info.c join.c main.c
