--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -2,6 +2,8 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
+
 include ../Makefile.conf
 
 ifeq (@USE_SGML_DOC@, true)
