--- a/dselect/Makefile.in
+++ b/dselect/Makefile.in
@@ -3,6 +3,7 @@ srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 top_builddir	= ..
 
+default: all
 include ../Makefile.conf
 
 CXX_SOURCES	= basecmds.cc baselist.cc basetop.cc bindings.cc curkeys.cc \
