--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -3,6 +3,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../Makefile.conf
 
 SOURCES		= compat.c database.c dbmodify.c dump.c ehandle.c fields.c \
