--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -3,6 +3,7 @@ srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 top_builddir	= ..
 
+default: all
 include ../Makefile.conf
 
 SOURCES		= main.c enquiry.c filesdb.c archives.c processarc.c \
