--- a/man/en/Makefile.in
+++ b/man/en/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../../Makefile.conf
 
 MAN5PAGES	= deb-control.5 deb-old.5 deb.5 dpkg.cfg.5 dselect.cfg.5
