--- a/man/fr/Makefile.in
+++ b/man/fr/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../../Makefile.conf
 
 frman1dir	= $(subst $(mandir),$(mandir)/fr,$(man1dir))
