--- a/man/ja/Makefile.in
+++ b/man/ja/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../../Makefile.conf
 
 jaman1dir	= $(subst $(mandir),$(mandir)/ja,$(man1dir))
