--- a/man/pt_BR/Makefile.in
+++ b/man/pt_BR/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../../Makefile.conf
 
 ptman8dir	= $(subst $(mandir),$(mandir)/pt_BR,$(man8dir))
