--- a/man/sv/Makefile.in
+++ b/man/sv/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../../Makefile.conf
 
 svman1dir	= $(subst $(mandir),$(mandir)/sv,$(man1dir))
