--- a/optlib/Makefile.in
+++ b/optlib/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../Makefile.conf
 
 SOURCES		= getopt.c getopt1.c long-options.c closeout.c obstack.c
