--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -2,6 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
+default: all
 include ../Makefile.conf
 
 BIN_SCRIPTS		= dpkg-name dpkg-source dpkg-genchanges \
