--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -2,8 +2,8 @@
 VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
-top_builddir	= ..
 
+default: all
 include ../Makefile.conf
 
 CFLAGS			+= -I$(top_srcdir)/optlib
