--- a/debian/control
+++ b/debian/control
@@ -58,11 +58,13 @@ Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
 Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja
 Description: Package building tools for Debian
- This package contains the tools (including dpkg-source) required to
- unpack, build and upload Debian source packages.
+ This package contains the necessary tools required to unpack
+ (dpkg-source), build (dpkg-buildpackage, dpkg-architecture,
+ dpkg-gencontrol, dpkg-shlibdeps) and prepare Debian source packages
+ for upload (dpkg-distaddfile, dpkg-genchanges, dpkg-parsechangelog).
  .
- Most Debian source packages will require additional tools to build -
- for example, most packages need the `make' and the C compiler `gcc'.
+ Also included are the basic .deb package format documentation and
+ utilities for building Packages and Sources files.
 
 Package: dpkg-doc
 Section: doc
