Remove autom4te.cache in clean target

--- a/debian/rules
+++ b/debian/rules
@@ -60,6 +60,7 @@ clean:
 	$(checkdir)
 	rm -f debian/files debian/substvars
 	rm -f debian/dpkg.substvars debian/dpkg-static.substvars
+	rm -fr autom4te.cache
 	rm -fr $(BUILD-DIRS) $(TMP)
 	rm -f po/{cat-id-tbl.c,stamp-cat-id,*.gmo}
 	rm -f stamp-build stamp-binary
