Install deselect.conffiles into tmp/dselect, not tmp/dpkg.

--- a/debian/rules
+++ b/debian/rules
@@ -268,7 +268,7 @@ binary-dselect: stamp-binary
 
 # Final package creation
 	install -d -m 755 -o root -g root $(TMP_DSELECT)/DEBIAN
-	install -p -m 644 -o root -g root debian/dselect.conffiles $(TMP_DPKG)/DEBIAN/conffiles
+	install -p -m 644 -o root -g root debian/dselect.conffiles $(TMP_DSELECT)/DEBIAN/conffiles
 	install -p -m 644 -o root -g root debian/dselect.conffiles $(TMP_DSELECT)/DEBIAN/prerm
 	install -p -m 755 -o root -g root debian/dselect.prerm $(TMP_DSELECT)/DEBIAN/prerm
 	install -p -m 755 -o root -g root debian/dselect.postinst $(TMP_DSELECT)/DEBIAN/postinst
