--- a/debian/rules
+++ b/debian/rules
@@ -248,7 +248,7 @@ binary-dselect: stamp-binary
 
 	set -e ; for i in "" de fr ja sv ; do \
 		install -d -m 755 -o root -g root $(TMP_DSELECT)/usr/share/man/$$i/man5 ; \
-		for m in dpkg.cfg.5  dselect.cfg.5 ; do \
+		for m in dselect.cfg.5 ; do \
 			if [ -f $(INSTALL_TMP)/usr/share/man/$$i/man5/$$m ] ; then \
 				cp -a $(INSTALL_TMP)/usr/share/man/$$i/man5/$$m $(TMP_DSELECT)/usr/share/man/$$i/man5/$$m ; \
 			fi ; \
