Fix install location of /usr/lib/dpkg/methods.

--- a/debian/rules
+++ b/debian/rules
@@ -240,7 +240,7 @@ binary-dselect: stamp-binary
 	install -d -m 755 -o root -g root $(TMP_DSELECT)/usr/bin
 	mv $(INSTALL_TMP)/usr/bin/dselect $(TMP_DSELECT)/usr/bin/
 
-	install -d -m 755 -o root -g root $(TMP_DSELECT)/usr/lib
+	install -d -m 755 -o root -g root $(TMP_DSELECT)/usr/lib/dpkg
 	mv $(INSTALL_TMP)/usr/lib/dpkg/methods $(TMP_DSELECT)/usr/lib/dpkg/
 
 	install -d -m 755 -o root -g root $(TMP_DSELECT)/var/lib/dpkg
