Install archtable into /usr/share/dpkg/.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -19,6 +19,7 @@ sbindir			= @sbindir@
 
 libdir			= @libdir@
 dpkglibdir		= $(libdir)/$(PACKAGE)
+dpkgsharedir		= $(sharedir)/$(PACKAGE)
 
 methodsdir		= $(dpkglibdir)/methods
 parsechangelogdir	= $(dpkglibdir)/parsechangelog
