--- a/debian/rules
+++ b/debian/rules
@@ -108,6 +108,7 @@ binary-dpkg-most binary-dpkg-static-most: binary-dpkg%-most: stamp-binary%
 	cp -a $(INSTALL_TMP)/usr/lib/dpkg/mksplit $(TMP_DPKG)/usr/lib/dpkg/
 	cp -a $(INSTALL_TMP)/usr/lib/dpkg/enoent $(TMP_DPKG)/usr/lib/dpkg/
 	cp -a $(INSTALL_TMP)/usr/share/locale $(TMP_DPKG)/usr/share/
+	cp -a $(INSTALL_TMP)/usr/share/dpkg $(TMP_DPKG)/usr/share/
 	set -e ; for i in dpkg-split dpkg-query ; do \
 		cp -a $(INSTALL_TMP)/usr/bin/$$i $(TMP_DPKG)/usr/bin/ ; \
 	done
