--- a/debian/rules
+++ b/debian/rules
@@ -103,8 +103,8 @@ binary-dpkg-most binary-dpkg-static-most: binary-dpkg%-most: stamp-binary%
 	set -e ; for i in info alternatives parts updates ; do \
 		cp -a $(INSTALL_TMP)/var/lib/dpkg/$$i $(TMP_DPKG)/var/lib/dpkg/ ; \
 	done
-	cp -a $(INSTALL_TMP)/usr/sbin/start-stop-daemon $(TMP_DPKG)/sbin/
 	cp -a $(INSTALL_TMP)/usr/sbin $(TMP_DPKG)/usr/
+	mv $(TMP_DPKG)/usr/sbin/start-stop-daemon $(TMP_DPKG)/sbin/
 	cp -a $(INSTALL_TMP)/usr/lib/dpkg/mksplit $(TMP_DPKG)/usr/lib/dpkg/
 	cp -a $(INSTALL_TMP)/usr/lib/dpkg/enoent $(TMP_DPKG)/usr/lib/dpkg/
 	cp -a $(INSTALL_TMP)/usr/share/locale $(TMP_DPKG)/usr/share/
