Don't call nffreeall, in any of the c/c++ programs.  It appears dselect slightly corrupts it's memory enough that it can't be freed without segfaulting.

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -168,7 +168,7 @@ extern const char printforhelp[];
 /*** from startup.c ***/
 
 void standard_startup(jmp_buf *ejbuf, int argc, const char *const **argv, const char *prog, int loadcfg, const struct cmdinfo cmdinfos[]);
-void standard_shutdown(void);
+void standard_shutdown(int freemem);
 
 /*** from ehandle.c ***/
 
