Fix typo in installation directory

--- a/man/pt_BR/Makefile.in
+++ b/man/pt_BR/Makefile.in
@@ -19,10 +19,10 @@ distclean: clean
 install: install-doc
 
 install-doc:
-	$(mkinstalldirs) $(DESTDIR)$(svman8dir) 
+	$(mkinstalldirs) $(DESTDIR)$(ptman8dir) 
 	set -e ; for i in $(MAN8PAGES) ; do \
 	    if test -f $$i ; then d= ; else d="$(srcdir)/" ; fi ; \
-	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(svman8dir) ; \
+	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(ptman8dir) ; \
 	done
 
 .PHONY: all clean distclean install install-doc
