Modified to use autotools-dev.

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Wichert Akkerman <wakkerma@debian.org>, Adam Heath <doogie@debian.org
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.5.4
-Build-Depends: debiandoc-sgml, sgmltools-lite, libncurses-dev, gettext (>= 0.10.36), zlib1g-dev (>= 1:1.1.3-19.1)
+Build-Depends: debiandoc-sgml, sgmltools-lite, libncurses-dev, gettext (>= 0.10.36), zlib1g-dev (>= 1:1.1.3-19.1), autotools-dev
 Uploaders: Wichert Akkerman <wakkerma@debian.org>, Adam Heath <doogie@debian.org>
 
 Package: dpkg
