Updated for lattest gettext support.

--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ GENFILES	= version.h
 default: all
 include Makefile.conf
 
-SUBDIRS		= include optlib lib intl dpkg-deb split scripts utils main \
+SUBDIRS		= include optlib lib dpkg-deb split scripts utils main \
 		  @DSELECTDIR@ po methods man doc
 
 all: version.h all-recursive
