--- a/configure.in
+++ b/configure.in
@@ -109,6 +109,7 @@ dnl gettext
 
 ALL_LINGUAS="ca cs da de en es fr gl it nl ja pl pt_BR ru sv"
 AM_GNU_GETTEXT
+AM_PO_SUBDIRS
 
 dnl Other stuff
 
@@ -389,7 +390,6 @@ void unsetenv(const char *x);
 AC_OUTPUT(
 Makefile.conf
 Makefile
-intl/Makefile
 include/Makefile
 dpkg-deb/Makefile
 split/Makefile
@@ -410,4 +410,4 @@ main/Makefile
 dselect/Makefile
 methods/Makefile
 utils/Makefile
-po/Makefile:po/Makefile.in.in)
+po/Makefile.in:po/Makefile.in.in)
