--- a/po/.cvsignore
+++ b/po/.cvsignore
@@ -7,3 +7,11 @@ dpkg.pot
 stamp-cat-id
 POTFILES
 *.gmo
+Makefile.template
+Rules-quot
+boldquot.sed
+en@boldquot.header
+en@quot.header
+insert-header.sin
+quot.sed
+remove-potcdate.sin
