s/top_srcdir/abs_top_srcdir/

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -36,7 +36,7 @@ dpkgconfdir		= $(sysconfdir)/$(PACKAGE)
 alternativesdir		= $(sysconfdir)/alternatives
 
 abs_builddir		= @abs_builddir@
-top_srcdir		= @top_srcdir@
+abs_top_srcdir		= @abs_top_srcdir@
 ifeq ($(strip $(srcdir)),$(strip $(top_srcdir)))
 subdir =
 else
