* scripts/controllib.pl, scripts/dpkg-checkbuilddeps.pl: Moved dependency   parsing logic from dpkg-checkbuilddeps.  The dpkg-checkbuilddeps parser   didn't support empty fields, while the controllib parser did. * scripts/controllib.pl:   * Dependency fields are now parsed into a nested list structure.   * All dependency fields now support [arch] constructs.  Those that don't     apply for the current host_arch are removed during parsing.   * Comment lines(those that start with '#') are ignored during parsing.   * Store the original field's casing with 'o:' prepended in %fi. * scripts/dpkg-checkbuilddeps.pl:  Because of the above controllib.pl   changes, this script is much simpler now. * scripts/dpkg-gencontrol.pl:   * Use the original casing of field names when reporting unknown fields. * scripts/dpkg-gencontrol.pl, scripts/controllib.pl: After opening files,

--- a/debian/control
+++ b/debian/control
@@ -6,14 +6,16 @@ Uploaders: Wichert Akkerman <wakkerma@debian.org>, Adam Heath <doogie@debian.org
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.5.8
-Build-Depends: debiandoc-sgml, sgml-base (>= 1.9.1), sgmltools-lite, libncurses-dev, gettext (>= 0.12.1-3), zlib1g-dev (>= 1:1.1.3-19.1), autotools-dev
+Build-Depends: debiandoc-sgml, sgml-base (>= 1.9.1), sgmltools-lite, libncurses-dev, gettext (>= 0.12.1-3), zlib1g-dev (>= 1:1.1.3-19.1), autotools-dev, foo, bar
+# This is a comment
 Uploaders: Wichert Akkerman <wakkerma@debian.org>, Adam Heath <doogie@debian.org>
 
+# And another comment
 Package: dpkg
 Architecture: any
-Essential: yes
+urce: yes
 Pre-Depends: dselect, ${shlibs:Pre-Depends}
-Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static, dpkg-dev (<< 1.9)
+Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static, dpkg-dev (<< 1.9), foo [s390]
 Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3)
 Description: Package maintenance system for Debian
  This package contains the programs which handle the installation and
