--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Uploaders: Wichert Akkerman <wakkerma@debian.org>, Adam Heath <doogie@debian.org
 
 Package: dpkg
 Architecture: any
-urce: yes
+Essential: yes
 Pre-Depends: dselect, ${shlibs:Pre-Depends}
 Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static, dpkg-dev (<< 1.9), foo [s390]
 Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3)
