--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -2,7 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
-SUBDIRS		= de en fr ja pt_BR ru sv
+SUBDIRS		= de en fr ja pt_BR ru sv es
 
 default: all
 include ../Makefile.conf
