--- a/man/es/Makefile.in
+++ b/man/es/Makefile.in
@@ -5,16 +5,15 @@ top_srcdir	= @top_srcdir@
 default: all
 include ../../Makefile.conf
 
-frman1dir	= $(subst $(mandir),$(mandir)/fr,$(man1dir))
-frman5dir	= $(subst $(mandir),$(mandir)/fr,$(man5dir))
-frman8dir	= $(subst $(mandir),$(mandir)/fr,$(man8dir))
+esman1dir	= $(subst $(mandir),$(mandir)/es,$(man1dir))
+esman5dir	= $(subst $(mandir),$(mandir)/es,$(man5dir))
+esman8dir	= $(subst $(mandir),$(mandir)/es,$(man8dir))
 
-MAN1PAGES	= dpkg-deb.1 dpkg-name.1 dpkg-source.1
+MAN1PAGES	= dpkg-deb.1 dpkg-name.1 md5sum.1 dpkg-checkbuilddeps.1 822-date.1
 MAN5PAGES	= deb-control.5 deb.5
 MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 dpkg-scanpackages.8 \
-			dpkg-scansources.8 install-info.8 start-stop-daemon.8 \
+			start-stop-daemon.8 dselect.8 \
 			update-alternatives.8 dpkg-statoverride.8 dpkg-split.8 \
-			dpkg-query.8
 
 all: 
 
@@ -28,20 +27,20 @@ install: install-doc
 install-program:
 
 install-doc:
-	$(mkinstalldirs) $(DESTDIR)$(frman1dir) 
+	$(mkinstalldirs) $(DESTDIR)$(esman1dir) 
 	set -e ; for i in $(MAN1PAGES) ; do \
 	    if test -f $$i ; then d= ; else d="$(srcdir)/" ; fi ; \
-	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(frman1dir) ; \
+	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(esman1dir) ; \
 	done
-	$(mkinstalldirs) $(DESTDIR)$(frman5dir) 
+	$(mkinstalldirs) $(DESTDIR)$(esman5dir) 
 	set -e ; for i in $(MAN5PAGES) ; do \
 	    if test -f $$i ; then d= ; else d="$(srcdir)/" ; fi ; \
-	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(frman5dir) ; \
+	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(esman5dir) ; \
 	done
-	$(mkinstalldirs) $(DESTDIR)$(frman8dir) 
+	$(mkinstalldirs) $(DESTDIR)$(esman8dir) 
 	set -e ; for i in $(MAN8PAGES) ; do \
 	    if test -f $$i ; then d= ; else d="$(srcdir)/" ; fi ; \
-	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(frman8dir) ; \
+	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(esman8dir) ; \
 	done
 
 .PHONY: all clean distclean install install-doc install-program
