--- a/configure.in
+++ b/configure.in
@@ -473,6 +473,7 @@ man/Makefile
 man/paths.ent
 man/de/Makefile
 man/en/Makefile
+man/es/Makefile
 man/fr/Makefile
 man/ja/Makefile
 man/ru/Makefile
