Apply patch from Robert Millan to fix #211566; update support for Debian FreeBSD.

--- a/configure.in
+++ b/configure.in
@@ -107,6 +107,8 @@ case $target_os in
           os_type="openbsd";;
         *netbsd* )
           os_type="netbsd";;
+        *kfreebsd*-gnu* )
+          os_type="kfreebsd-gnu";;
         *freebsd* )
           os_type="freebsd";;
         gnu )
