--- a/configure.in
+++ b/configure.in
@@ -134,7 +134,7 @@ AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}", [Set this to the canonical D
 
 dnl gettext
 
-ALL_LINGUAS="ca cs da de en es fr gl it nl ja pl pt_BR ru sv"
+ALL_LINGUAS="ca cs da de en es fr gl it ja nl nn pl pt pt_BR ru sv"
 AM_GNU_GETTEXT([external])
 AM_PO_SUBDIRS
 if test "x$HAVE_LOCALE_H" = "x"; then
