--- a/man/es/Makefile.in
+++ b/man/es/Makefile.in
@@ -9,7 +9,8 @@ esman1dir	= $(subst $(mandir),$(mandir)/es,$(man1dir))
 esman5dir	= $(subst $(mandir),$(mandir)/es,$(man5dir))
 esman8dir	= $(subst $(mandir),$(mandir)/es,$(man8dir))
 
-MAN1PAGES	= dpkg-deb.1 dpkg-name.1 md5sum.1 dpkg-checkbuilddeps.1 822-date.1
+MAN1PAGES	= dpkg-deb.1 dpkg-name.1 md5sum.1 dpkg-checkbuilddeps.1 \
+		  822-date.1 dpkg-source.1
 MAN5PAGES	= deb-control.5 deb.5
 MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 dpkg-scanpackages.8 \
 			start-stop-daemon.8 dselect.8 \
