Tollef and I gorged on low hanging fruit and got our hands sticky.

--- a/debian/control
+++ b/debian/control
@@ -70,7 +70,7 @@ Description: Dpkg Internals Documentation
  This document describes the internal operations of the dpkg program. It
  covers building as well as the internals functions. If you are interested
  in creating your own packages, then you may be more interested in the
- packaging-manual documentation package.
+ debian-policy package.
 
 Package: dselect
 Architecture: any
