--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -191,6 +191,7 @@ void ohshite(const char *fmt, ...) NONRETURNPRINTFFORMAT(1,2);
 void ohshitvb(struct varbuf*) NONRETURNING;
 void badusage(const char *fmt, ...) NONRETURNPRINTFFORMAT(1,2);
 void werr(const char *what) NONRETURNING;
+void warningf(const char *fmt, ...);
 
 /*** from mlib.c ***/
 
