Add new Spanish manpage.

--- a/man/es/Makefile.in
+++ b/man/es/Makefile.in
@@ -15,6 +15,7 @@ MAN5PAGES	= deb-control.5 deb.5
 MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 dpkg-scanpackages.8 \
 			start-stop-daemon.8 dselect.8 \
 			update-alternatives.8 dpkg-statoverride.8 dpkg-split.8 \
+			dpkg-scansources.8
 
 all: 
 
