New German manpage.

--- a/man/de/Makefile.in
+++ b/man/de/Makefile.in
@@ -10,6 +10,7 @@ deman5dir	= $(subst $(mandir),$(mandir)/de,$(man5dir))
 deman8dir	= $(subst $(mandir),$(mandir)/de,$(man8dir))
 
 MAN1PAGES	= md5sum.1 
+MAN8PAGES	= update-alternatives.8
 
 all: 
 
@@ -25,6 +26,11 @@ install-doc:
 	set -e ; for i in $(MAN1PAGES) ; do \
 	    if test -f $$i ; then d= ; else d="$(srcdir)/" ; fi ; \
 	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(deman1dir) ; \
+	done
+	$(mkinstalldirs) $(DESTDIR)$(deman8dir) 
+	set -e ; for i in $(MAN8PAGES) ; do \
+	    if test -f $$i ; then d= ; else d="$(srcdir)/" ; fi ; \
+	    $(INSTALL_DATA) $$d$$i $(DESTDIR)$(deman8dir) ; \
 	done
 
 .PHONY: all clean distclean install install-doc
