--- a/configure.in
+++ b/configure.in
@@ -105,6 +105,8 @@ case $target_os in
           os_type="linux-gnu";;
         *openbsd* )
           os_type="openbsd";;
+        *knetbsd*-gnu* )
+          os_type="knetbsd-gnu";;
         *netbsd* )
           os_type="netbsd";;
         *kfreebsd*-gnu* )
