--- a/man/de/Makefile.in
+++ b/man/de/Makefile.in
@@ -10,7 +10,7 @@ deman5dir	= $(subst $(mandir),$(mandir)/de,$(man5dir))
 deman8dir	= $(subst $(mandir),$(mandir)/de,$(man8dir))
 
 MAN1PAGES	= md5sum.1 
-MAN8PAGES	= update-alternatives.8
+MAN8PAGES	= start-stop-daemon.8 update-alternatives.8
 
 all: 
 
