--- a/man/fr/Makefile.in
+++ b/man/fr/Makefile.in
@@ -9,12 +9,12 @@ frman1dir	= $(subst $(mandir),$(mandir)/fr,$(man1dir))
 frman5dir	= $(subst $(mandir),$(mandir)/fr,$(man5dir))
 frman8dir	= $(subst $(mandir),$(mandir)/fr,$(man8dir))
 
-MAN1PAGES	= dpkg-deb.1 dpkg-name.1 dpkg-source.1
+MAN1PAGES	= dpkg-deb.1 dpkg-name.1 dpkg-source.1 dpkg-scanpackages.1 \
+		  dpkg-scansources.1
 MAN5PAGES	= deb-control.5 deb.5
-MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 dpkg-scanpackages.8 \
-			dpkg-scansources.8 install-info.8 start-stop-daemon.8 \
-			update-alternatives.8 dpkg-statoverride.8 dpkg-split.8 \
-			dpkg-query.8
+MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 install-info.8 \
+		  start-stop-daemon.8 update-alternatives.8 \
+		  dpkg-statoverride.8 dpkg-split.8 dpkg-query.8
 
 all: 
 
