--- a/man/ja/Makefile.in
+++ b/man/ja/Makefile.in
@@ -10,11 +10,12 @@ jaman5dir	= $(subst $(mandir),$(mandir)/ja,$(man5dir))
 jaman8dir	= $(subst $(mandir),$(mandir)/ja,$(man8dir))
 
 MAN1PAGES	= dpkg-deb.1 md5sum.1 822-date.1 dpkg-name.1 \
-		  dpkg-checkbuilddeps.1 dpkg-architecture.1 dpkg-source.1
+		  dpkg-checkbuilddeps.1 dpkg-architecture.1 dpkg-source.1 \
+		  dpkg-scanpackages.1 dpkg-scansources.1
 MAN5PAGES	= deb-old.5 deb.5 deb-control.5
 MAN8PAGES	= dpkg.8 dselect.8 install-info.8 start-stop-daemon.8 \
 		  update-alternatives.8 cleanup-info.8 dpkg-divert.8 \
-		  dpkg-scanpackages.8 dpkg-scansources.8 dpkg-query.8
+		  dpkg-query.8
 
 all: 
 
