--- a/dselect/Makefile.in
+++ b/dselect/Makefile.in
@@ -14,7 +14,7 @@ CXX_SOURCES	= basecmds.cc baselist.cc basetop.cc bindings.cc curkeys.cc \
 MAN8PAGES	= dselect.8
 
 OBJECTS		= $(patsubst %.cc, %.o, $(CXX_SOURCES))
-GENFILES	= $(OBJECTS) dselect helpmsgs.h curkeys.h
+GENFILES	= $(OBJECTS) dselect curkeys.h
 
 .PHONY: all
 all:: dselect
