--- a/configure.in
+++ b/configure.in
@@ -136,7 +136,7 @@ AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}", [Set this to the canonical D
 
 dnl gettext
 
-ALL_LINGUAS="ca cs da de el en es fr gl he it ja ko nl nn pl pt pt_BR ru sv zh_CN"
+ALL_LINGUAS="bs ca cs da de el es eu fr gl he it ja ko nl nn pl pt pt_BR ru sk sv zh_CN zh_TW"
 AM_GNU_GETTEXT([external])
 AM_PO_SUBDIRS
 if test "x$HAVE_LOCALE_H" = "x"; then
