dpkg (1.13.5) experimental; urgency=low
  The "Flatulent Elm of West Ruislip" Release.

  * Actions and package states are now logged by default in the
    /var/log/dpkg.log file.  This file is rotated monthly and can be
    disabled by commenting the line in /etc/dpkg/dpkg.cfg.
  * User decisions about conffiles are now logged.
  * dpkg-source no longer complains about Enhances field.  Closes: #159642,
    #159745, #159746.
  * preinst no longer relies on procps being installed.  Closes: #311808.

  * Architecture Support:
    - Change DEB_*_GNU_CPU from i386 to i486, to reflect reality.
      DEB_*_ARCH_CPU remains at i386, you should be checking against that.
      Closes: #310394.
    - Fixed order ostable is read to prevent Linux becoming the Hurd.
      Closes: #309603.
  * Updated Manpage Translations (Christian Perrier):
    - Syntax error corrected in Swedish man page for dpkg-deb.
      Closes: #300980.
    - Syntax error corrected in Spanish man page for dpkg-scanpackages.
      Closes: #300981

 -- Scott James Remnant <scott@netsplit.com>  Mon,  6 Jun 2005 05:34:21 +0100

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: dpkg
 Section: base
 Priority: required
-Maintainer: Dpkg Development <debian-dpkg@lists.debian.org>
-Uploaders: Scott James Remnant <scott@netsplit.com>
+Maintainer: Scott James Remnant <scott@netsplit.com>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.6.1.0
