dpkg (1.13.6) experimental; urgency=low
  The "Just kidding about the God part" Release.

  * Fixed incorrect installation location of /etc/logrotate.d/dpkg caused
    by a mis-understanding of dh_install's abilities.

 -- Scott James Remnant <scott@netsplit.com>  Mon,  6 Jun 2005 05:58:36 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -70,6 +70,8 @@ binary-arch: install
 	dh_testdir -a
 	dh_testroot -a
 	dh_install --sourcedir=debian/tmp -a
+	install -d debian/dpkg/etc/logrotate.d
+	install -m 644 debian/dpkg.logrotate debian/dpkg/etc/logrotate.d/dpkg
 
 	dh_installchangelogs -pdpkg ChangeLog
 	dh_installdocs -pdpkg
